--- a/src/pages/user/css/AddToCartButton.css
+++ b/src/pages/user/css/AddToCartButton.css
@@ -273,7 +273,7 @@ body {
 /* ================================================= */
 .search-heading {
     /* Kích thước lớn: text-3xl */
-    font-size: 1.375rem; /* Khoảng 30px */
+    font-size: 1.2rem; /* Khoảng 30px */
     line-height: 2.25rem; 
 
     /* Độ đậm cực lớn: font-extrabold */
@@ -293,7 +293,9 @@ body {
     position: relative; 
     width: 100%;
 }
-
+.textdis{
+  font-size: 0.775rem; /* text-sm */
+}
 /* ================================================= */
 /* 2. STYLES CHO ICON (.search-icon) */
 /* ================================================= */
